Updated registered users and resume.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 		<br><br>      
 		I started working on it in 2011 using Starcraft 2's Galaxy Editor. Since then I have kept developing and maintaining it while communicating with the active playerbase about their thoughts and ideas. 
 		<br><br>
-		Since it went public it has been played by thousands of players and maintained an average rating of over <b>4.7/5</b> from over 2000 reviews. The game has a loyal fanbase with some players having played the game for thousands of hours. There's also an active <a href="http://www.cruisercommand.com">forum</a> with 120 registered users.
+		Since it went public it has been played by thousands of players and maintained an average rating of over <b>4.7/5</b> from over 2000 reviews. The game has a loyal fanbase with some players having played the game for thousands of hours. There's also an active <a href="http://www.cruisercommand.com">forum</a> with over 150 registered users.
+		<br><br>
+		A user-made video compilation can be found <a href="https://www.youtube.com/watch?v=EVvC6QygN80">here</a>
 	      </div>
 	      <div class="col-md-4">
 		<br><br>
