Added new version of resume and fixed spelling error

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		  There's the backend part with a MySQL database. For development reasons, we maintained support for both a MySQL and PostgreSQL database through a wrapper. We also performed a decent amount of penetration testing to root out any problems with SQL injections or stored XSS injections.
 		  <br><br>
 
-		  I spent a decent amount of time working on the front-end as well which was made in a combination of Zurb Foundation and AngularJS. I took the non-functional UI design made by another team made and connected it to the back-end and redesigned it as necessary.
+		  I spent a decent amount of time working on the front-end as well which was made in a combination of Zurb Foundation and AngularJS. I took the non-functional UI design made by another person in the team and connected it to the back-end and redesigned it as necessary.
 		  <br><br>
 		  Since this project was made for Beta Family, the code is not open source. However, you can see the result at their <a href="https://betafamily.com/webrecorder/demo" target="_blank">demo page</a>.
 
