Updated 'About me' page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<br><br>
 		In my free time, I've worked on developing a multiplayer strategy game mod for Starcraft 2, called <b>Cruiser Command</b>. It's played by players around the world with an average rating of over 4.8/5 out of thousands of reviews. Personal projects are important to me, and I enjoy spending time working and experimenting with ideas I have.
 		<br><br>
-		I am currently working towards a Master's degree in Computer Science at the Royal Institute of Technology (KTH) in Stockholm, Sweden. I am in my third year out of five and I'm actively looking for internships and other opportunities to improve as a programmer. I'm willing to relocate, especially for internships in America.
+		I am currently working towards a Master's degree in Computer Science at the Royal Institute of Technology (KTH) in Stockholm, Sweden. I am in my fourth year out of five and I'm actively looking for full-time positions and other opportunities to improve as a programmer. I'm willing to relocate, especially for positions in America.
 		<br><br>
 		This site contains a portfolio with descriptions of some of the larger projects I've done as well as some general contact information.
 		My resume is available <a target="_blank" href="./personal/cv.pdf">here</a>.
