Added a part to home automation

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 		  <br><br>
 		  Along with this, I've also added some custom Jasper modules to control light and music. My version of the Jasper repository can also be found on <a href="https://github.com/Siretu/jasper-client">GitHub</a>.
 		  <br><br>
-		  The surveillance system continuously pings my smartphone over wifi, to detect if I'm home. When I'm not, it starts taking pictures and compares them to detect movement. When movement is detected, it saves the frames locally for later review and emails me to notify me about the potential intruder.
+		  The surveillance system continuously pings my smartphone over wifi, to detect if I'm home. When I'm not, it starts taking pictures and compares them to detect movement. When movement is detected, it saves the frames locally for later review and emails me to notify me about the potential intruder. This system is also available on GitHub in a <a href="https://github.com/Siretu/webcam-surveillance">separate repository</a>.
 		</div>
 		<br><br><a class="link" id="l_homeautomation" href="#homeautomation">Read more...</a>
 	      </div>
